[gd_scene load_steps=11 format=3 uid="uid://bgjqv87s428vj"]

[ext_resource type="Script" path="res://src/activities/activity.gd" id="1_p3tdh"]
[ext_resource type="Texture2D" uid="uid://scrrmhfudf2s" path="res://resources/buttons/play.png" id="2_mj4w3"]
[ext_resource type="Texture2D" uid="uid://cuo20bny42d52" path="res://resources/buttons/play_hover.png" id="3_d1a00"]
[ext_resource type="Texture2D" uid="uid://br0fv28n5c3ap" path="res://resources/buttons/stop.png" id="4_ff1fq"]
[ext_resource type="Texture2D" uid="uid://bean37gr7jal0" path="res://resources/buttons/stop_hover.png" id="5_4nnlu"]

[sub_resource type="Theme" id="Theme_g4nif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x8i4c"]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bue37"]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fvko"]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lmyel"]
content_margin_left = 10.0
content_margin_right = 10.0

[node name="Activity" type="HBoxContainer" groups=["activity_tracking"]]
offset_right = 175.0
offset_bottom = 31.0
theme = SubResource("Theme_g4nif")
alignment = 1
script = ExtResource("1_p3tdh")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_x8i4c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bue37")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2fvko")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lmyel")
text = "x"

[node name="ActivityEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
placeholder_text = "ACTIVITY"
expand_to_text_length = true

[node name="TimerEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 1.5
placeholder_text = "00:00:00"
expand_to_text_length = true

[node name="BoxContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.01

[node name="PlayButton" type="TextureButton" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_mj4w3")
texture_hover = ExtResource("3_d1a00")
ignore_texture_size = true
stretch_mode = 5

[node name="StopButton" type="TextureButton" parent="BoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_ff1fq")
texture_hover = ExtResource("5_4nnlu")
ignore_texture_size = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="text_changed" from="ActivityEdit" to="." method="_on_activity_edit_text_changed"]
[connection signal="focus_entered" from="TimerEdit" to="." method="_on_timer_edit_focus_entered"]
[connection signal="focus_exited" from="TimerEdit" to="." method="_on_timer_edit_focus_exited"]
[connection signal="text_submitted" from="TimerEdit" to="." method="_on_timer_edit_text_submitted"]
[connection signal="pressed" from="BoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
